B-F Sandbox Full-Backup/src/objects/wombat_Transaction_Items__c.object
<CustomObject>
    <fields>
        <fullName>ClientRowID__c</fullName>
        <label>ClientRowID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_API_Name__c</fullName>
        <label>Object API Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Row_Type__c</fullName>
        <description>Either 1 - Insert, 2 - Update or 3 - Delete</description>
        <label>Row Type</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServerRowID__c</fullName>
        <label>ServerRowID</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wombat_Sync_Session__c</fullName>
        <label>wombat_Sync_Session</label>
        <referenceTo>wombat_Sync_Session__c</referenceTo>
        <relationshipLabel>wombat_Transaction_Item</relationshipLabel>
        <relationshipName>wombat_Transaction_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>wombat_Transaction_Item</label>
    <nameField>
        <displayFormat>WTI-{0}</displayFormat>
        <label>wombat_Transaction_Items Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>wombat_Transaction_Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>